created email10 html

--- a/email_templates/email10.html
+++ b/email_templates/email10.html
@@ -10,13 +10,63 @@
     <title>google hangouts</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/email-base.css">
-    <link rel="stylesheet" href="../css/email7.css">
+    <link rel="stylesheet" href="../css/email10.css">
 </head>
 
 <body>
-    <div class="em-template" style="border: none;">
+    <!-- <div class="em-template" style="border: none;">
         <img style="width: 1100px;" src="../images/ups phish.png" alt="">
+    </div> -->
+    <div class="em-template">
+        <h2 style="padding: 1em 0 0; font-weight: 100;">UPS Failed Delivery Attempt</h2>
+
+        <div class="em-from-div">
+            <div class="em-dot">
+                <span>
+<img style="width: 100%; display: inline;" src="../images/person-icon.png" alt="">           
+MM
+                </span>
+            </div>
+            <h4 class="em-dot-sender">
+                UPS eNotification
+                <span style="color: gray;">&lt;amazon@update-nt.com&gt;</span>
+            </h4> 
+            <!-- <h4 class="em-dot-date">
+                6/14/2021 12:06 PM
+            </h4> -->
+        </div>
+                   <br>
+
+                <hr>
+<div class="body">
+            <div class="ups">
+                <img src="../images/UPS-Logo-HD.png" alt="paypal logo">
+            </div>
+            <br>
+            <h3>
+                Dear Ria,
+            </h3>
+            <br>
+
+            <p>
+                We have attempted to deliver your item!<br><br>
+                The delivery attempt failed because nobody was present at the shipping address, so this notification has been automatically sent. You may arrange re-delivery by visiting the nearest UPS office with the printed shipping invoice mentioned below.<br><br>
+                If the package is not scheduled for delivery or picked up withing 48 hours, it will be returned to the sender.<br><br></p>
+                <h4 >TRACKING NUMBER: </h4>
+                <p class="tooltip" style="color: blue; text-decoration: underline;"> F0WPZX 5587729907
+                    <span class="tooltiptext">https://trk.cpro20.com/click/F0WP-ZX-5587-729907/<br> Click or
+                        tap to
+                        follow link</span>
+<br><br></p>
+                <h4>Class: </h4>
+                <p>Package services<br><br></p>
+                <h4>Service(s): </h4>
+                <p>Delivery Confirmation<br><br>
+            </p>
+
+        </div>
     </div>
+
     </body>
 
 </html>    
