--- a/pages/question10.html
+++ b/pages/question10.html
@@ -8,7 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email1.css">
+    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email10.css">
 
     <title>Phishing Quiz</title>
 </head>
@@ -25,42 +26,61 @@
             <div class="pBarContainer">
                 <p>
                     <span class="pBar" id="sp00">
+                        <span class="count00"> 10</span>
                         <img id="ck00" src="../images/checkmark.png" alt="" width="20px;" style="display: none;"> 
                         <img id="x00" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
                     </span>
                     <span class="pBar" id="sp01">
+                        <span class="count01"> 9</span>
+
                         <img id="ck01" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
                         <img id="x01" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
                     </span>
                     <span class="pBar" id="sp02">
+                        <span class="count02"> 8</span>
+
                         <img id="ck02" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
                         <img id="x02" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
                     </span>
                     <span class="pBar" id="sp03">
+                        <span class="count03"> 7</span>
+
                         <img id="ck03" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
                         <img id="x03" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
                     </span>
                     <span class="pBar" id="sp04">
+                        <span class="count04"> 6</span>
+
                         <img id="ck04" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
                         <img id="x04" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
                     </span>
                     <span class="pBar" id="sp05">
+                        <span class="count05">5</span>
+
                         <img id="ck05" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
                         <img id="x05" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
                     </span>
                     <span class="pBar" id="sp06">
+                        <span class="count06">4</span>
+
                         <img id="ck06" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
                         <img id="x06" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
                     </span>
                     <span class="pBar" id="sp07">
+                        <span class="count07">3</span>
+
                         <img id="ck07" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
                         <img id="x07" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
                     </span>
                     <span class="pBar" id="sp08">
+                        <span class="count08"> 2</span>
+
                         <img id="ck08" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
                         <img id="x08" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
                     </span>
                     <span class="pBar" id="sp09">
+                        <span class="count09"> 1</span>
+
                         <img id="ck09" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
                         <img id="x09" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
                     </span>
