add email9 - netflix

--- a/email_templates/email9.html
+++ b/email_templates/email9.html
@@ -10,14 +10,61 @@
     <title>google hangouts</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/email-base.css">
-    <link rel="stylesheet" href="../css/email7.css">
+    <link rel="stylesheet" href="../css/email9.css">
 </head>
 
 <body>
-    <div class="em-template" style="border: none;">
+    <!-- <div class="em-template" style="border: none;">
         <img style="width: 70%;" src="../images/netflix phish.png" alt="">
 
+    </div> -->
+    <div class="em-template">
+
+        <!-- <div class="em-from-div">
+            <div class="em-dot">
+                <span>
+                    D
+                </span>
+            </div>
+            <h4>
+                <strong>Dropbox</strong>
+                <span style="color: gray;">&lt;no-reply@dropboxmail.com&gt;</span>
+            </h4>
+            <h4 class="em-dot-date" style="color: gray;">
+                1/11/2022 4:48 PM
+            </h4>
+        </div> -->
+        <!-- <br> -->
+        <div class="body">
+            <div class="netflix">
+                <img src="../images/netflix.png" alt="netflix logo">
+            </div>
+            <h1>
+                Reset your password
+            </h1>
+            <br>
+
+            <p> Hi Sam,
+            </p><br><br>
+            <p> Let's reset your password so you can get back to watching.
+            </p><br><br>
+
+            <div class="tooltip tooltip-button">RESET PASSWORD
+                <span class="tooltiptext">https://www.netflixs.com/reset/password/dsjgfi-djd9975nr</span>
+            </div><br><br>
+
+            <p>
+                If you did not ask to reset your password, 
+                <span class="tooltip" style="color: blue; text-decoration: underline;">click here
+                    <span class="tooltiptext">https://www.netflixs.com/reset/password/dsjgfi-djd9975nr
+                    </span>
+                </span>to login and reset your password <strong>immediately</strong> to avoid unauthorized activity on your account.<br><br>
+            </p>
+        <br><br>
+
+        </div>
     </div>
+
 </body>
 
 </html>   
