--- a/email_templates/email8.html
+++ b/email_templates/email8.html
@@ -1,4 +1,4 @@
-<!-- PHISH -->
+<!-- REAL -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,14 +10,12 @@
     <title>google hangouts</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/email-base.css">
-    <link rel="stylesheet" href="../css/email7.css">
+    <link rel="stylesheet" href="../css/email8.css">
 </head>
 
 <body>
 <div class="em-template" style="border: none;">
-    <img src="../images/amazon phish.png" alt="">
-
-
+    <img class="fone" src="../images/Vectary texture(1).png" alt="">
 </div>
 </body>
 
