--- a/email_templates/email9.html
+++ b/email_templates/email9.html
@@ -39,7 +39,7 @@
             <div class="netflix">
                 <img src="../images/netflix.png" alt="netflix logo">
             </div>
-            <h1>
+            <h1 style="font-family: Arial, sans-serif;">
                 Reset your password
             </h1>
             <br>
