--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -38,7 +38,8 @@
                 </p><br>
             </div>
             <div class="content__section--img-container img-container">
-                <img class="responsiveImage" width="300" height="auto" src="../images/phishin.gif" alt="Welcome-logo">
+                <!-- <img class="responsiveImage" width="300" height="auto" src="../images/phishing phone.png" alt="Welcome-logo"> -->
+                <img width="300" height="auto" src="https://www.ecranmobile.fr/photo/art/grande/46761730-37235619.jpg?v=1590997268" alt="https://www.ecranmobile.fr/photo/art/grande/46761730-37235619.jpg?v=1590997268">
             </div>
 
             <!-- This is the NAV  -->
