--- a/pages/question9.html
+++ b/pages/question9.html
@@ -8,7 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email1.css">
+    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email9.css">
 
     <title>Phishing Quiz</title>
 </head>
