--- a/pages/question8.html
+++ b/pages/question8.html
@@ -8,7 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email1.css">
+    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email8.css">
 
     <title>Phishing Quiz</title>
 </head>
@@ -87,13 +88,10 @@
             </div>
 
             <!-- Quiz Nav -->
-            <main>
-                <iframe name="A" width=960 height=300 src="../email_templates/email8.html" >
-                </iframe>
-    
-
-            </main>
-            <!-- <nav data-role="navbar"> -->
+            <div class="em-template" style="border: none;">
+                <img class="fone" src="../images/Vectary texture(1).png" alt="">
+            </div>
+                        <!-- <nav data-role="navbar"> -->
             <div>
                 <div class="content__section--button answerBtns">
                     <button class="answerButtons" name="A" value="A">Phishing</button> 
