Working anaswer check

--- a/pages/question11.html
+++ b/pages/question11.html
@@ -15,7 +15,7 @@
 </head>
 
 <body id="8" class="ui-body">
-    <div class="content">
+    <div  class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
@@ -23,7 +23,7 @@
                 <h1>It's in the details</h1>
             </header>
 
-            <div class="pBarContainer">
+            <div name="A" class="pBarContainer">
                 <p>
                     <span class="pBar" id="sp00">
                         <span class="count00"> 10</span>
