--- a/pages/question8.html
+++ b/pages/question8.html
@@ -23,7 +23,7 @@
                 <h1>Look out for sharks!</h1>
             </header>
 
-            <div class="pBarContainer">
+            <div id="answer" class="pBarContainer">
                 <p>
                     <span class="pBar" id="sp00">
                         <span class="count00"> 10</span>
