Updated question 11 with id="answer"

--- a/pages/question11.html
+++ b/pages/question11.html
@@ -23,7 +23,7 @@
                 <h1>It's in the details</h1>
             </header>
 
-            <div name="A" class="pBarContainer">
+            <div id="answer" class="pBarContainer">
                 <p>
                     <span class="pBar" id="sp00">
                         <span class="count00"> 10</span>
