change ALERT to click event to try quiz again

--- a/pages/results.html
+++ b/pages/results.html
@@ -130,6 +130,9 @@
                  -->
                  <div class="content__section--button">
                     <button id="certBtn" style="vertical-align:middle"><span>Get Certificate</span></button>
+                    <button id="tryAgain"><span>Try again</span></button>
+
+                    </div>
 
                  <!-- <button id="certBtn"
                     style="width: 200px; height: 75px;background: #C82255; border-radius: 10px; border: none; color: white; font-size: 1.5em; font-family:'Courier New', Courier, monospace">Download
