Updated question 11 with value

--- a/email_templates/email11.html
+++ b/email_templates/email11.html
@@ -15,8 +15,8 @@
 
 <body>
     <div class="em-template webpage">
-        <img class="fone web1" src="../images/appleA.png" alt="">
-        <img class="fone web2" src="../images/appleB.png" alt="">
+        <img value="A" class="fone web1" src="../images/appleA.png" alt="">
+        <img value="B" class="fone web2" src="../images/appleB.png" alt="">
                 </div>
 </body>
 
