new tooltip bubble style

--- a/email_templates/email7.html
+++ b/email_templates/email7.html
@@ -46,14 +46,14 @@
             <p style="margin-left: 0;">Roberta Cavallo added you to a group conversation.<br><br><span
                     style="color: gray;">with 1 other</span></p><br><br>
             <div class="tooltip tooltip-button">View Conversation
-                <span class="tooltiptext">https://google.hangouts.com/group-convo/hgroi33/</span>
+                <span class="tooltiptext tooltip-content">https://google.hangouts.com/group-convo/hgroi33/</span>
             </div><br><br><br>
         </div>
         <br>
         <p style="font-size: small; color: gray;">
             This notification was sent to <span style="color: blue;">chris.kissler@gmail.com</span>.
             <span class="tooltip" style="color: blue;">Unsubscribe
-                <span class="tooltiptext">https://google.hangouts.com/unsubscribe/
+                <span class="tooltiptext tooltip-content">https://google.hangouts.com/unsubscribe/
                 </span>
             </span> from these emails.<br>
             To stop receiving Google Hangouts notifications from someone, open their Google profile and
