3d bubble tooltip test - only email1

--- a/email_templates/email1.html
+++ b/email_templates/email1.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ghostwriting</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email-base-bubble.css">
     <link rel="stylesheet" href="../css/email1.css">
 </head>
 
@@ -59,7 +59,7 @@
             </p><br>
 
             <div class="tooltip tooltip-button">View Package Price
-                <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z5/ <br>Click
+                <span class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z5/ <br>Click
                     or
                     tap to follow link</span>
             </div><br>
