Finally got all user answer and choice JS fixed.

--- a/pages/question1.html
+++ b/pages/question1.html
@@ -148,7 +148,7 @@
             </div>
         
             <!-- Quiz Nav -->
-            <iframe name="A" width=960 height=300 src="../email_templates/email1.html" >
+            <iframe data-answer="A" width=960 height=300 src="../email_templates/email1.html" >
             </iframe>
             <!-- <nav data-role="navbar"> -->
 
