--- a/pages/question11.html
+++ b/pages/question11.html
@@ -82,7 +82,7 @@
         <div class="teal-body">
     
 
-    <div class="content">
+    <div data-answer="A" class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
@@ -90,7 +90,7 @@
                 <h1>It's in the details</h1>
             </header>
 
-            <div id="answer" class="pBarContainer">
+            <div class="pBarContainer">
                 <p>
                     <span class="pBar" id="sp00">
                         <span class="count00"> 10</span>
@@ -159,8 +159,8 @@
             </iframe> -->
 
             <div class="em-template webpage">
-                <img class="fone web1" src="../images/appleA.png" alt="">
-                <img class="fone web2" src="../images/appleB.png" alt="">
+                <img name="A" data-selected="A" class="fone web1 answerButtons" src="../images/appleA.png" alt="">
+                <img name="B" data-selected="B" class="fone web2 answerButtons" src="../images/appleB.png" alt="">
                         </div>
                         <!-- <nav data-role="navbar"> -->
             <div class="section__answer">
