--- a/pages/question8.html
+++ b/pages/question8.html
@@ -81,7 +81,7 @@
     <div class="teal-body">
 
 
-    <div class="content">
+    <div data-answer="A" class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
