--- a/pages/question2.html
+++ b/pages/question2.html
@@ -149,7 +149,7 @@
             </div>
             <!-- Quiz Nav -->
             <main>
-                <iframe name="A" width=960 height=300 src="../email_templates/email2.html" >
+                <iframe data-answer="A" width=960 height=300 src="../email_templates/email2.html" >
                 </iframe>
     
             </main>
