--- a/pages/question6.html
+++ b/pages/question6.html
@@ -155,7 +155,7 @@
 
             <!-- Quiz Nav -->
             <main>
-                <iframe name="B" width=960 height=300 src="../email_templates/email6.html" >
+                <iframe data-answer="B" width=960 height=300 src="../email_templates/email6.html" >
                     <!-- <div class="em-template">
 
                     <div class="em-from-div">
