update tooltip to bubble style

--- a/email_templates/email1.html
+++ b/email_templates/email1.html
@@ -48,36 +48,38 @@
                 today.</p>
             <br>
 
-            <p class="tooltip" style="color: teal; font-size: large;"><strong>Chat with Us Now</strong>
-                <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z4/ <br>Click or
-                    tap to
-                    follow link</span>
+            <p class="tooltip" style="color: teal; font-size: 18px;"><strong>Chat with Us Now</strong>
+                <span class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z4/ <br>
+                    <strong>Click or tap to follow link</strong>
+                </span>
             </p><br>
 
-            <p style="color: teal; text-decoration: underline; font-size: large"><strong>Call Now (855)
+            <p style="color: teal; text-decoration: underline; font-size: 18px"><strong>Call Now (855)
                     205-1739</strong>
             </p><br>
 
             <div class="tooltip tooltip-button">View Package Price
-                <span class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z5/ <br>Click
-                    or
-                    tap to follow link</span>
+                <span class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z5/ <br>
+                    <strong>Click or tap to follow link</strong>
+                </span>
             </div><br>
 
-            <p style="text-align: center; font-size: smaller">You are subscribed to this email as <span
+            <p style="text-align: center; font-size: 12px;">You are subscribed to this email as <span
                     style="border-bottom: 2px dotted;">juliemooley@mooleycorp.com</span><br>
                 Click here to modify your
                 <span class="tooltip" style="color: blue; text-decoration: underline;">preferences
                     <span
-                        class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
-                        <br>Click or tap to follow link
+                        class="tooltiptext tooltip-content shine" >https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
+                        <br>
+                        <strong>Click or tap to follow link</strong>
                     </span>
                 </span>
                 or
                 <span class="tooltip" style="color: blue; text-decoration: underline;">unsubscribe
                     <span
-                        class="tooltiptext">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
-                        <br> Click or tap to follow link
+                        class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/form?3hvty--3e8t7z6&sl=y&t=5&ac=gf69/
+                        <br> 
+                        <strong>Click or tap to follow link</strong>
                     </span>
                 </span>.
             </p>
