--- a/email_templates/email2.html
+++ b/email_templates/email2.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paypal</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email-base-bubble.css">
     <link rel="stylesheet" href="../css/email2.css">
 </head>
 
@@ -19,7 +19,7 @@
 
         <h4 style="padding: 2em 0 0;">
             From: <span class="tooltip" style="color: blue; text-decoration: underline;">PayPal
-                <span class="tooltiptext">mailto:itechsoftbd@gmail.com <br>Ctrl + Click to follow link
+                <span class="tooltiptext tooltip-content shine" id="paypal-hover">mailto: itechsoftbd@gmail.com <br>Ctrl + Click to follow link
                 </span>
             </span> <br>
             Sent: Monday, July 5, 2021 12:35 PM<br>
@@ -52,9 +52,9 @@
             </p><br><br>
 
             <div class="tooltip tooltip-button">Confirm My Account
-                <span class="tooltiptext">https://www.reemind.duckdns.org/admin/information/<br> Ctrl +
-                    Click to follow
-                    link</span>
+                <span class="tooltiptext tooltip-content shine">https://www.reemind. duckdns.org/admin/information/<br>
+                    <strong>Ctrl + Click to follow link</strong>
+                </span>
             </div><br><br>
 
             <p>Thank you for using PayPal</p><br>
@@ -62,7 +62,8 @@
                 be receieve
                 someone may have accessed your account,go to PayPal (<span class="tooltip"
                     style="color: blue; text-decoration: underline;">https://paypal.com)
-                    <span class="tooltiptext">https://www.paypal.com/<br> Ctrl + Click to follow link
+                    <span class="tooltiptext tooltip-content shine" style="width: 140px;">https://www.paypal .com/<br> 
+                        <strong>Ctrl + Click <br>to follow link</strong>
                     </span>
 
                 </span> and <br><br>change your password as soon as possible</p>
