--- a/email_templates/email4.html
+++ b/email_templates/email4.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>synchrony bank</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email-base-bubble.css">
     <link rel="stylesheet" href="../css/email4.css">
 </head>
 
@@ -39,8 +39,9 @@
         <div class="body">
             <p style="float: right; margin: 10px;">Account ending in: 9528 | <span class="tooltip"
                     style="text-decoration: underline;">Log in
-                    <span class="tooltiptext">https://tjx.syf.com/login/?lang=en<br> Click or tap to follow
-                        link</span>
+                    <span class="tooltiptext tooltip-content shine">https://tjx.syf.com/login/?lang=en<br>
+                        <strong>Click or tap to follow link</strong>
+                        </span>
                 </span></p>
             <div class="tjx-synchrony">
                 <img src="../images/tjmx-logos.png" alt="tjx logos">
@@ -63,15 +64,17 @@
                 <div class="tooltip">
                     <img src="../images/googlemap-walmart.png" alt="google map">
                     <span
-                        class="tooltiptext">https://www.google.com/maps/search/?api=1&query=36.365723,-94.217579<br>
-                        Click or tap to follow link</span>
+                        class="tooltiptext tooltip-content shine" style="width: 173px; bottom: unset;">https://www.google.com/maps/search/?api=1&query=36.365723,-94.217579<br>
+                        <strong>Click or tap to follow link</strong>
+                    </span>
                 </div>
             </div>
 
             <h2 style="text-align:center;">Update your alert preferences anytime.</h2><br>
             <div class="tooltip tooltip-button">Log In Now
-                <span class="tooltiptext">https://tjx.syf.com/login/?lang=en<br> Click or tap to follow
-                    link</span>
+                <span class="tooltiptext tooltip-content shine">https://tjx.syf.com/login/?lang=en<br>
+                    <strong>Click or tap to follow link</strong>
+                </span>
             </div><br><br>
 
             <p>The TJX Rewards® Platinum Mastercard® is issued by Synchrony Bank pursuant to a license by
@@ -83,7 +86,8 @@
                 visit the
                 Federal Trade Commission′ s (FTC) consumer
                 <span class="tooltip" style="color: blue; text-decoration: underline;">website.
-                    <span class="tooltiptext">https://www.identitytheft.gov/<br> Click or tap to follow link
+                    <span class="tooltiptext tooltip-content shine">https://www. identitytheft.gov/<br> 
+                        <strong>Click or tap to follow link</strong>
                     </span>
                 </span>
                 </><br><br>
@@ -99,7 +103,8 @@
                     style="border-bottom: 2px dotted;">170
                     Election Road, Suite 125, Draper, UT 84020-6425,</span> USA.
                 <span class="tooltip" style="color: blue; text-decoration: underline;">www.synchrony.com
-                    <span class="tooltiptext">https://www.synchrony.com/<br> Click or tap to follow link
+                    <span class="tooltiptext tooltip-content shine">https://www. synchrony.com/<br> 
+                        <strong>Click or tap to follow link</strong>
                     </span><br><br>
 
             </p><br>
