--- a/email_templates/email5.html
+++ b/email_templates/email5.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recruiter</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email-base-bubble.css">
     <link rel="stylesheet" href="../css/email5.css">
 </head>
 
@@ -40,26 +40,30 @@
             Friendly follow-up in case my email got lost in the mix. Would love to connect with you about
             the <span class="tooltip" style="color: blue; text-decoration: underline;">Senior Product
                 Designer
-                <span class="tooltiptext">https://znsrc.com/c/adqqzfgmqt<br> Click or tap to follow link
+                <span class="tooltiptext tooltip-content shine">https://znsrc.com/c/adqqzfgmqt<br>
+                    <strong>Click or tap to follow link</strong>
                 </span>
             </span>
             at
             <span class="tooltip" style="color: blue; text-decoration: underline;">Polygence
-                <span class="tooltiptext">https://znsrc.com/c/mloexxaehp<br> Click or tap to follow link
+                <span class="tooltiptext tooltip-content shine">https://znsrc.com/c/mloexxaehp<br> 
+                    <strong>Click or tap to follow link</strong>
                 </span>
             </span>.
             <br><br>
 
             This is a seriously special opportunity to join a mission-driven startup ( <span class="tooltip"
                 style="color: blue; text-decoration: underline;">with excellent reviews<span
-                    class="tooltiptext">https://znsrc.com/c/gcxengnbav<br> Click or tap to follow link
+                    class="tooltiptext tooltip-content shine">https://znsrc.com/c/gcxengnbav<br> 
+                    <strong>Click or tap to follow link</strong>
                 </span>
             </span>) before hitting the growth stage.<br><br>
 
             If you're interested, find time with me here:
             <span class="tooltip"
                 style="color: blue; text-decoration: underline;">https://calendly.com/recr-amber/pg-ux
-                <span class="tooltiptext">https://znsrc.com/c/dnrevnchwn<br> Click or tap to follow link
+                <span class="tooltiptext tooltip-content shine">https://znsrc.com/c/dnrevnchwn<br> 
+                    <strong>Click or tap to follow link</strong>
                 </span>
             </span> <br><br>
 
@@ -67,8 +71,8 @@
             Amber Arnold<br>
             Fractional Recruiter for Polygence | <span class="tooltip"
                 style="color: blue; text-decoration: underline;">Linkedin
-                <span class="tooltiptext">https://linkedln.com.znsrc.com/c/orluiyhvlp<br> Click or tap to
-                    follow link
+                <span class="tooltiptext tooltip-content shine">https://linkedln.com .znsrc.com/c/orluiyhvlp<br> 
+                    <strong>Click or tap to follow link</strong>
                 </span>
             </span><br>
 
