--- a/email_templates/email9.html
+++ b/email_templates/email9.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>google hangouts</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email-base-bubble.css">
     <link rel="stylesheet" href="../css/email9.css">
 </head>
 
@@ -50,13 +50,13 @@
             </p><br><br>
 
             <div class="tooltip tooltip-button">RESET PASSWORD
-                <span class="tooltiptext">https://www.netflixs.com/reset/password/dsjgfi-djd9975nr</span>
+                <span class="tooltiptext tooltip-content shine">https://www .netflixs.com/reset/password/dsjgfi-djd9975nr</span>
             </div><br><br>
 
             <p>
                 If you did not ask to reset your password, 
                 <span class="tooltip" style="color: blue; text-decoration: underline;">click here
-                    <span class="tooltiptext">https://www.netflixs.com/reset/password/dsjgfi-djd9975nr
+                    <span class="tooltiptext tooltip-content shine">https://www .netflixs.com/reset/password/dsjgfi-djd9975nr
                     </span>
                 </span>to login and reset your password <strong>immediately</strong> to avoid unauthorized activity on your account.<br><br>
             </p>
