--- a/email_templates/email10.html
+++ b/email_templates/email10.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>google hangouts</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email-base-bubble.css">
     <link rel="stylesheet" href="../css/email10.css">
 </head>
 
@@ -24,7 +24,7 @@
             <div class="em-dot">
                 <span>
 <img style="width: 100%; display: inline;" src="../images/person-icon.png" alt="">           
-MM
+
                 </span>
             </div>
             <h4 class="em-dot-sender">
@@ -54,9 +54,9 @@ MM
                 If the package is not scheduled for delivery or picked up withing 48 hours, it will be returned to the sender.<br><br></p>
                 <h4 >TRACKING NUMBER: </h4>
                 <p class="tooltip" style="color: blue; text-decoration: underline;"> F0WPZX 5587729907
-                    <span class="tooltiptext">https://trk.cpro20.com/click/F0WP-ZX-5587-729907/<br> Click or
-                        tap to
-                        follow link</span>
+                    <span class="tooltiptext tooltip-content shine">https://trk.cpro20.com/click/F0WP-ZX-5587-729907/<br> 
+                        <strong>Click or tap to follow link</strong>
+                    </span>
 <br><br></p>
                 <h4>Class: </h4>
                 <p>Package services<br><br></p>
