--- a/email_templates/email6.html
+++ b/email_templates/email6.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dropbox</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email-base-bubble.css">
     <link rel="stylesheet" href="../css/email6.css">
 </head>
 
@@ -48,13 +48,13 @@
             </p><br><br>
 
             <div class="tooltip tooltip-button">Upgrade your Dropbox
-                <span class="tooltiptext">https://www.dropbox.com/buy</span>
+                <span class="tooltiptext tooltip-content shine">https://www.dropbox .com/buy</span>
             </div><br><br>
 
             <p>
                 For other ways to get more space, visit our
                 <span class="tooltip" style="color: blue;">Get More Space
-                    <span class="tooltiptext">https://www.dropbox.com/help/space/get-more-space
+                    <span class="tooltiptext tooltip-content shine">https://www.dropbox .com/help/space/get-more-space
                     </span>
                 </span>page.<br><br>
             </p>
@@ -67,7 +67,7 @@
             <p>
                 P.S. If you need the biggest plan we've got, check out
                 <span class="tooltip" style="color: blue;">Dropbox for Business.
-                    <span class="tooltiptext">https://www.dropbox.com/business</span>
+                    <span class="tooltiptext tooltip-content shine">https://www .dropbox.com/business</span>
                 </span>
             </p><br><br>
 
