Fixed most of it. need to fix 8 and 11 now.

--- a/pages/question3.html
+++ b/pages/question3.html
@@ -155,7 +155,7 @@
             <main>
 
                 
-                <iframe data-answer="A" width=960 height=300 src="../email_templates/email3.html" >
+                <iframe data-selected="A" width=960 height=300 src="../email_templates/email3.html" >
                 </iframe>
     
             </main>
@@ -163,8 +163,8 @@
             <!-- <nav data-role="navbar"> -->
             <div>
                 <div class="content__section--button answerBtns">
-                    <button class="answerButtons" name="A" value="A">Phishing</button> 
-                    <button class="answerButtons" name="B" value="B">Valid</button>
+                    <button class="answerButtons" value="A" data-selected="A">Phishing</button> 
+                    <button class="answerButtons" value="B" data-selected="B">Valid</button>
                 </div>
 
                 <div class="content__section--button userBtns">
