--- a/pages/question7.html
+++ b/pages/question7.html
@@ -164,8 +164,8 @@
             <!-- <nav data-role="navbar"> -->
             <div>
                 <div class="content__section--button answerBtns">
-                    <button class="answerButtons" name="A" value="A">Phishing</button> 
-                    <button class="answerButtons" name="B" value="B">Valid</button>
+                    <button class="answerButtons" value="A" data-selected="A">Phishing</button> 
+                    <button class="answerButtons" value="B" data-selected="B">Valid</button>
                 </div>
 
                 <div class="content__section--button userBtns">
