--- a/pages/question8.html
+++ b/pages/question8.html
@@ -160,8 +160,8 @@
                         <!-- <nav data-role="navbar"> -->
             <div>
                 <div class="content__section--button answerBtns">
-                    <button class="answerButtons" name="A" value="A">Phishing</button> 
-                    <button class="answerButtons" name="B" value="B">Valid</button>
+                    <button class="answerButtons" name="A" data-selected="A">Phishing</button> 
+                    <button class="answerButtons" name="B" data-selected="B">Valid</button>
                 </div>
 
                 <div class="content__section--button userBtns">
