Fixed javascript for answer selections.

--- a/pages/question8.html
+++ b/pages/question8.html
@@ -89,7 +89,7 @@
                 <h1>Look out for sharks!</h1>
             </header>
 
-            <div id="answer" class="pBarContainer">
+            <div class="pBarContainer">
                 <p>
                     <span class="pBar" id="sp00">
                         <span class="count00"> 10</span>
@@ -160,8 +160,8 @@
                         <!-- <nav data-role="navbar"> -->
             <div>
                 <div class="content__section--button answerBtns">
-                    <button class="answerButtons" name="A" data-selected="A">Phishing</button> 
-                    <button class="answerButtons" name="B" data-selected="B">Valid</button>
+                    <button class="answerButtons" value="A" data-selected="A">Phishing</button> 
+                    <button class="answerButtons" value="B" data-selected="B">Valid</button>
                 </div>
 
                 <div class="content__section--button userBtns">
