All issues with checking right wrong buttons.

--- a/pages/question11.html
+++ b/pages/question11.html
@@ -158,8 +158,8 @@
             </iframe> -->
 
             <div class="em-template webpage">
-                <img value="A" data-selected="A" class="fone web1 answerButtons" style="background: none;" src="../images/appleA.png" alt="">
-                <img value="B" data-selected="B" class="fone web2 answerButtons" style="background: none;" src="../images/appleB.png" alt="">
+                <img data-value="A" data-selected="A" class="fone web1 answerButtons" style="background: none;" src="../images/appleA.png" alt="">
+                <img data-value="B" data-selected="B" class="fone web2 answerButtons" style="background: none;" src="../images/appleB.png" alt="">
                         </div>
                         <!-- <nav data-role="navbar"> -->
             <div class="section__answer">
