--- a/email_templates/email10.html
+++ b/email_templates/email10.html
@@ -11,10 +11,13 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/email-base-bubble.css">
     <link rel="stylesheet" href="../css/email10.css">
+    <link rel="stylesheet" href="../css/modal.css">
+
 </head>
 
 <body>
     <!-- <div class="em-template" style="border: none;">
+
         <img style="width: 1100px;" src="../images/ups phish.png" alt="">
     </div> -->
     <div class="em-template">
@@ -69,4 +72,5 @@
 
     </body>
 
+    <script src="../js/modal.js"></script>
 </html>    
