--- a/pages/question10.html
+++ b/pages/question10.html
@@ -180,8 +180,9 @@
 
                         <!-- Modal content -->
                         <div class="modal-content">
-                            <iframe width=900 height=200 src="../images/ups modal pic.png">
-                            </iframe>
+                            <div class="mistakes">
+                            <img src="../images/ups modal pic.png">
+                            </img></div>
                             <span class="close">&times;</span>
                             <div class="content__section--button userBtns">
                                 <button id="0" class="next-btn">Next<span></span></button>
@@ -199,7 +200,7 @@
                             <span class="close">&times;</span>
                             <h1>Yay! Good job.</h1>
                             <div class="content__section--button userBtns">
-                                <button id="0" class="next-btn">Next<span></span></button>
+                                <button id="0" class="next-btn"><span>Next</span></button>
                             </div>
                         </div>
 
