back to iframes (not overflow: scroll) modals

--- a/pages/question10.html
+++ b/pages/question10.html
@@ -180,9 +180,11 @@
 
                         <!-- Modal content -->
                         <div class="modal-content">
-                            <div class="mistakes">
-                            <img src="../images/ups modal pic.png">
-                            </img></div>
+                            <iframe width=900 height=200 src="../images/ups modal pic.png">
+                            </iframe>
+                                <!-- <div class="mistakes">
+                                <img src="../images/ups modal pic.png">
+                                </img></div> -->
                             <span class="close">&times;</span>
                             <div class="content__section--button userBtns">
                                 <button id="0" class="next-btn">Next<span></span></button>
