change iframe to overflow: scroll in modal

--- a/pages/question10.html
+++ b/pages/question10.html
@@ -180,11 +180,11 @@
 
                         <!-- Modal content -->
                         <div class="modal-content">
-                            <iframe width=900 height=200 src="../images/ups modal pic.png">
-                            </iframe>
-                                <!-- <div class="mistakes">
+                            <!-- <iframe width=900 height=200 src="../images/ups modal pic.png">
+                            </iframe> -->
+                                <div class="mistakes">
                                 <img src="../images/ups modal pic.png">
-                                </img></div> -->
+                                </img></div>
                             <span class="close">&times;</span>
                             <div class="content__section--button userBtns">
                                 <button id="0" class="next-btn">Next<span></span></button>
