--- a/pages/question10.html
+++ b/pages/question10.html
@@ -184,8 +184,9 @@
                             </iframe> -->
                                 <div class="mistakes">
                                 <img src="../images/ups modal pic.png">
-                                </img></div>
-                            <!-- <span class="close">&times;</span> -->
+                                </img>
+                            </div>
+                            <span class="close">&times;</span>
                             <div class="content__section--button userBtns">
                                 <button id="0" class="next-btn">Next<span></span></button>
                             </div>
@@ -200,8 +201,9 @@
                             <div class="yay">
                             <img src="../images/phish happy.gif">
                             </img>
-                            <!-- <span class="close">&times;</span> -->
-                            <h1>Yay! Good job.</h1></div>
+                            <span class="close">&times;</span>
+                            <h1>Yay! Good job.</h1>
+                        </div>
                             <div class="content__section--button userBtns">
                                 <button id="0" class="next-btn"><span>Next</span></button>
                             </div>
