change heading content

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section class="content__section" data-theme="b" data-role="page" id="pgWelcome" data-fullscreen="true">
         <!-- Navbar setup Start -->
         <header class="content__section--title" data-role="header" data-position="fixed">
-            <h1>Would you take the bait?</h1>
+            <h1>Will you click the bait?</h1>
             <br>
         </header>
         <div class="content__section--text">
