add text to mistakes modal

--- a/pages/question10.html
+++ b/pages/question10.html
@@ -184,9 +184,9 @@
                             </iframe> -->
                                 <div class="mistakes">
                                 <img src="../images/ups modal pic.png">
-                                </img>
-                            </div>
-                            <span class="close">&times;</span>
+                                </img> 
+                            </div>                                <span class="close">&times;</span>
+                            <h1>Scroll image to see hooks</h1>
                             <div class="content__section--button userBtns">
                                 <button id="0" class="next-btn">Next<span></span></button>
                             </div>
