--- a/pages/question10.html
+++ b/pages/question10.html
@@ -182,28 +182,33 @@
                         <div class="modal-content">
                             <!-- <iframe width=900 height=200 src="../images/ups modal pic.png">
                             </iframe> -->
-                                <div class="mistakes">
+                            <div class="sad">
+
+                                <img src="../images/phish_sad_1-removebg-preview 1.png" alt="">
+                                <h1>Dang! you got hooked.</h1>
+                                <p>Scroll to learn why</p>
+                            </div>
+                            <div class="mistakes">
                                 <img src="../images/ups modal pic.png">
-                                </img> 
-                            </div>                                <span class="close">&times;</span>
-                            <h1>Scroll image to see hooks</h1>
+                                </img>
+                            </div> <span class="close">&times;</span>
                             <div class="content__section--button userBtns">
                                 <button id="0" class="next-btn">Next<span></span></button>
                             </div>
                         </div>
-                        </div>
+                    </div>
 
 
-                        <div id="correct" class="modal correct">
+                    <div id="correct" class="modal correct">
 
                         <!-- Modal content -->
                         <div class="modal-content ">
                             <div class="yay">
-                            <img src="../images/phish happy.gif">
-                            </img>
-                            <span class="close">&times;</span>
-                            <h1>Yay! Good job.</h1>
-                        </div>
+                                <img src="../images/phish happy.gif">
+                                </img>
+                                <span class="close">&times;</span>
+                                <h1>Yay! Good job.</h1>
+                            </div>
                             <div class="content__section--button userBtns">
                                 <button id="0" class="next-btn"><span>Next</span></button>
                             </div>
