Fully working with Modal

--- a/pages/question11.html
+++ b/pages/question11.html
@@ -170,7 +170,7 @@
                     <button class="answerButtons" name="B" value="B">Valid</button>
                 </div> -->
 
-                <div class="content__section--button userBtns">
+                <div class="content__section--button submitBtn userBtns">
                     <button id="btn"><span>Submit</span></button>
                 </div>
 
