--- a/pages/question6.html
+++ b/pages/question6.html
@@ -222,7 +222,7 @@
                     <button class="answerButtons" value="B" data-selected="B">Valid</button>
                 </div>
 
-                <div class="content__section--button userBtns">
+                <div class="content__section--button submitBtn userBtns">
                     <button id="btn"><span>Submit</span></button>
                 </div>
 
