--- a/pages/question1.html
+++ b/pages/question1.html
@@ -160,7 +160,7 @@
                     <button class="answerButtons" value="B" data-selected="B">Valid</button>
                 </div>
 
-                <div class="content__section--button userBtns">
+                <div class="content__section--button userBtns submitBtn">
                     <button id="btn"><span>Submit</span></button>
                 </div>
 
@@ -180,7 +180,7 @@
                         </div>
                         <div class="mistakes">
                             <img src="../images/ups modal pic.png">
-                            </img>
+                            
                         </div> <span class="close">&times;</span>
                         <div class="content__section--button userBtns">
                             <button id="0" class="next-btn">Next<span></span></button>
@@ -195,7 +195,7 @@
                     <div class="modal-content ">
                         <div class="yay">
                             <img src="../images/phish happy.gif">
-                            </img>
+                            
                             <span class="close">&times;</span>
                             <h1>Yay! Good job.</h1>
                         </div>
