--- a/pages/question10.html
+++ b/pages/question10.html
@@ -170,7 +170,7 @@
                         <button class="answerButtons" value="A" data-selected="A">Phishing</button>
                         <button class="answerButtons" value="B" data-selected="B">Valid</button>
                     </div>
-                    <div class="content__section--button userBtns">
+                    <div class="content__section--button submitBtn userBtns">
                         <button id="btn"><span>Submit</span></button>
                     </div>
 
