--- a/pages/question2.html
+++ b/pages/question2.html
@@ -163,7 +163,7 @@
                     <button class="answerButtons" value="B" data-selected="B">Valid</button>
                 </div>
 
-                <div class="content__section--button userBtns">
+                <div class="content__section--button  submitBtn userBtns">
                     <button id="btn"><span>Submit</span></button>
                 </div>
 
