--- a/pages/question3.html
+++ b/pages/question3.html
@@ -168,7 +168,7 @@
                     <button class="answerButtons" value="B" data-selected="B">Valid</button>
                 </div>
 
-                <div class="content__section--button userBtns">
+                <div class="content__section--button submitBtn userBtns">
                     <button id="btn"><span>Submit</span></button>
                 </div>
 
@@ -188,7 +188,7 @@
                         </div>
                         <div class="mistakes">
                             <img src="../images/ups modal pic.png">
-                            </img>
+                            
                         </div> <span class="close">&times;</span>
                         <div class="content__section--button userBtns">
                             <button id="0" class="next-btn">Next<span></span></button>
@@ -203,11 +203,11 @@
                     <div class="modal-content ">
                         <div class="yay">
                             <img src="../images/phish happy.gif">
-                            </img>
+                           
                             <span class="close">&times;</span>
                             <h1>Yay! Good job.</h1>
                         </div>
-                        <div class="content__section--button userBtns">
+                        <div class="content__section--button submitBtn userBtns">
                             <button id="0" class="next-btn"><span>Next</span></button>
                         </div>
                     </div>
