Updated scripts.js to look at aswervalue and answerbutton

--- a/pages/question3.html
+++ b/pages/question3.html
@@ -207,7 +207,7 @@
                             <span class="close">&times;</span>
                             <h1>Yay! Good job.</h1>
                         </div>
-                        <div class="content__section--button submitBtn userBtns">
+                        <div class="content__section--button userBtns">
                             <button id="0" class="next-btn"><span>Next</span></button>
                         </div>
                     </div>
