chg to trns bg img

--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -104,7 +104,7 @@
             </div>
             <div class="content__section--img-container img-container">
                 <!-- <img class="responsiveImage" width="300" height="auto" src="../images/phishing phone.png" alt="Welcome-logo"> -->
-                <img width="300" height="auto" src="https://www.ecranmobile.fr/photo/art/grande/46761730-37235619.jpg?v=1590997268" alt="https://www.ecranmobile.fr/photo/art/grande/46761730-37235619.jpg?v=1590997268">
+                <img width="300" height="auto" src="../images/phishing_phone-removebg-preview 1.png" alt="https://www.ecranmobile.fr/photo/art/grande/46761730-37235619.jpg?v=1590997268">
             </div>
 
             <!-- This is the NAV  -->
