put span around Next

--- a/pages/question2.html
+++ b/pages/question2.html
@@ -186,7 +186,7 @@
                             </img>
                         </div> <span class="close">&times;</span>
                         <div class="content__section--button userBtns">
-                            <button id="0" class="next-btn">Next<span></span></button>
+                            <button id="0" class="next-btn"><span>Next</span></button>
                         </div>
                     </div>
                 </div>
